packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/UoWDataMaskRule__mdt.object-meta.xml
<CustomObject>
    <description>Data masking rules for sensitive fields. Used by UoWMaskingService to apply pattern-based or regex-based masking strategies.</description>
    <label>UoW Data Mask Rule</label>
    <pluralLabel>UoW Data Mask Rules</pluralLabel>
</CustomObject>