packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/ComplianceCategory__c.field-meta.xml
<CustomField>
    <fullName>ComplianceCategory__c</fullName>
    <description>Compliance regulation category for this masking rule (e.g., GDPR, HIPAA, PCI-DSS, CCPA). Used for documentation and reporting purposes.</description>
    <inlineHelpText>Optional. Comma-separated compliance categories (e.g., PII,GDPR,HIPAA). For documentation and reporting purposes only.</inlineHelpText>
    <label>Compliance Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>