packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this masking rule, its purpose, and examples of matched fields or patterns.</description>
    <inlineHelpText>Describe what this rule masks and why. Include examples of matched values for documentation.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>