packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <description>Specific field API name to mask (e.g., SSN__c, CreditCardNumber__c). Required when MatchType=EXACT_FIELD. Each rule masks one field - create separate rules for multiple fields to allow individual enable/disable control.</description>
    <inlineHelpText>Required for EXACT_FIELD match type. Enter field API name (e.g., SSN__c, Birthdate). Must also set SObject Type. Not used for REGEX_PATTERN.</inlineHelpText>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>