packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable this masking rule. Inactive rules are not loaded by the masking service.</description>
    <inlineHelpText>Check to enable this masking rule. Uncheck to disable without deleting the rule.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>