packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/MaskingOptions__c.field-meta.xml
<CustomField>
    <fullName>MaskingOptions__c</fullName>
    <description>JSON configuration for masking strategy. Examples: {&quot;visibleCharacters&quot;: 4, &quot;position&quot;: &quot;end&quot;} for PARTIAL, {&quot;algorithm&quot;: &quot;SHA-256&quot;, &quot;truncateLength&quot;: 32} for HASH, {&quot;replacement&quot;: &quot;***REDACTED***&quot;} for REGEX_PATTERN.</description>
    <inlineHelpText>JSON options by strategy: PARTIAL: {&quot;visibleChars&quot;: 4, &quot;position&quot;: &quot;end&quot;|&quot;start&quot;}. EMAIL: {&quot;showLocalChars&quot;: 1, &quot;showDomain&quot;: true}. FULL/REDACT: leave empty.</inlineHelpText>
    <label>Masking Options (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>