packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/MaskingStrategy__c.field-meta.xml
<CustomField>
    <fullName>MaskingStrategy__c</fullName>
    <description>Masking strategy to apply: FULL (***), PARTIAL (***6789), EMAIL (j***@***.com), HASH (SHA256 hash), REDACT (null), CUSTOM (use MaskingClass__c).</description>
    <inlineHelpText>Select masking type: FULL replaces all chars with *, PARTIAL shows some chars (configure in Masking Options), EMAIL masks email format, HASH converts to SHA-256, REDACT returns null.</inlineHelpText>
    <label>Masking Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL</fullName>
                <default>true</default>
                <label>Full Masking</label>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
                <label>Partial Masking</label>
            </value>
            <value>
                <fullName>EMAIL</fullName>
                <label>Email Masking</label>
            </value>
            <value>
                <fullName>HASH</fullName>
                <label>Hash Masking</label>
            </value>
            <value>
                <fullName>REDACT</fullName>
                <label>Redact (Null)</label>
            </value>
            <value>
                <fullName>CUSTOM</fullName>
                <label>Custom Strategy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>