packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/MatchPattern__c.field-meta.xml
<CustomField>
    <fullName>MatchPattern__c</fullName>
    <description>Regex pattern for matching field values. For REGEX_PATTERN: regex pattern to match the value (e.g., \d{3}-\d{2}-\d{4} for SSN format). For EXACT_FIELD: not used (use FieldApiName__c instead).</description>
    <inlineHelpText>Required for REGEX_PATTERN match type. Enter regex to match field VALUES. Example: \d{3}-\d{2}-\d{4} matches SSN format. Not used for EXACT_FIELD.</inlineHelpText>
    <label>Match Pattern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>