packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <description>How to match fields for masking: EXACT_FIELD (specific field API name - requires FieldApiName__c), REGEX_PATTERN (regex on field value - requires MatchPattern__c).</description>
    <inlineHelpText>EXACT_FIELD: masks a specific field (set SObject Type + Field API Name). REGEX_PATTERN: masks any field whose VALUE matches the regex pattern (set Match Pattern).</inlineHelpText>
    <label>Match Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXACT_FIELD</fullName>
                <default>true</default>
                <label>Exact Field</label>
            </value>
            <value>
                <fullName>REGEX_PATTERN</fullName>
                <label>Regex Pattern</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>