packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>Target SObject API name (e.g., Contact, Account). Required for EXACT_FIELD match type. Optional for REGEX_PATTERN (leave blank to apply regex across all objects).</description>
    <inlineHelpText>Required for EXACT_FIELD. Enter SObject API name (e.g., Contact, Account, MyObject__c). Optional for REGEX_PATTERN - leave blank to apply across all objects.</inlineHelpText>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>