packages/uow-core/main/default/objects/UoWDataMaskRule__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>Execution order for masking rules. Lower numbers execute first. Rules are sorted by SortOrder ascending, then DeveloperName.</description>
    <inlineHelpText>Processing order (lower = first). Use to control which rule applies first when multiple rules could match the same field.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>